tests/language/negative/global_call.js
// ERROR: calling global function
function dirty() {
    return otherFunc();
}
dirty()
